k8s/mariadb/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mariadb-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 3306
      name: tcp
      protocol: TCP
    hosts:
    - "*"
