k8s/mariadb/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mariadb-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - mariadb-gateway
  tcp:
  - match:
    - port: 3306
    route:
    - destination:
        host: mariadb-service
        port:
          number: 3306
